Archive2/8e/cae953bf461fc8/output
clang: warning: -O4 is equivalent to -O3
main.cpp:24:28: warning: unused parameter 'denominator' [-Wunused-parameter]
int GCD(int numerator, int denominator) {return numerator;}
                           ^
main.cpp:61:1: warning: control may reach end of non-void function [-Wreturn-type]
}
^
main.cpp:65:17: error: read-only variable is not assignable
    myNumerator = a;
    ~~~~~~~~~~~ ^
main.cpp:70:17: error: read-only variable is not assignable
    myNumerator = b;
    ~~~~~~~~~~~ ^
main.cpp:83:35: error: too few arguments to function call, single argument 'a' was not specified
    int numerator = lhs.numerator() * rhs.denominator() + rhs.numerator() * lhs.denominator();
                    ~~~~~~~~~~~~~ ^
main.cpp:63:1: note: 'numerator' declared here
int Rational:: numerator(int a) const
^
main.cpp:83:55: error: too few arguments to function call, single argument 'b' was not specified
    int numerator = lhs.numerator() * rhs.denominator() + rhs.numerator() * lhs.denominator();
                                      ~~~~~~~~~~~~~~~ ^
main.cpp:68:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:83:73: error: too few arguments to function call, single argument 'a' was not specified
    int numerator = lhs.numerator() * rhs.denominator() + rhs.numerator() * lhs.denominator();
                                                          ~~~~~~~~~~~~~ ^
main.cpp:63:1: note: 'numerator' declared here
int Rational:: numerator(int a) const
^
main.cpp:83:93: error: too few arguments to function call, single argument 'b' was not specified
    int numerator = lhs.numerator() * rhs.denominator() + rhs.numerator() * lhs.denominator();
                                                                            ~~~~~~~~~~~~~~~ ^
main.cpp:68:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:84:39: error: too few arguments to function call, single argument 'b' was not specified
    int denominator = lhs.denominator() * rhs.denominator();
                      ~~~~~~~~~~~~~~~ ^
main.cpp:68:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:84:59: error: too few arguments to function call, single argument 'b' was not specified
    int denominator = lhs.denominator() * rhs.denominator();
                                          ~~~~~~~~~~~~~~~ ^
main.cpp:68:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:91:35: error: too few arguments to function call, single argument 'a' was not specified
    int numerator = lhs.numerator() * rhs.denominator() + rhs.numerator() * lhs.denominator();
                    ~~~~~~~~~~~~~ ^
main.cpp:63:1: note: 'numerator' declared here
int Rational:: numerator(int a) const
^
main.cpp:91:55: error: too few arguments to function call, single argument 'b' was not specified
    int numerator = lhs.numerator() * rhs.denominator() + rhs.numerator() * lhs.denominator();
                                      ~~~~~~~~~~~~~~~ ^
main.cpp:68:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:91:73: error: too few arguments to function call, single argument 'a' was not specified
    int numerator = lhs.numerator() * rhs.denominator() + rhs.numerator() * lhs.denominator();
                                                          ~~~~~~~~~~~~~ ^
main.cpp:63:1: note: 'numerator' declared here
int Rational:: numerator(int a) const
^
main.cpp:91:93: error: too few arguments to function call, single argument 'b' was not specified
    int numerator = lhs.numerator() * rhs.denominator() + rhs.numerator() * lhs.denominator();
                                                                            ~~~~~~~~~~~~~~~ ^
main.cpp:68:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:92:39: error: too few arguments to function call, single argument 'b' was not specified
    int denominator = lhs.denominator() * rhs.denominator();
                      ~~~~~~~~~~~~~~~ ^
main.cpp:68:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:92:59: error: too few arguments to function call, single argument 'b' was not specified
    int denominator = lhs.denominator() * rhs.denominator();
                                          ~~~~~~~~~~~~~~~ ^
main.cpp:68:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:98:35: error: too few arguments to function call, single argument 'a' was not specified
    int numerator = lhs.numerator() * rhs.numerator();
                    ~~~~~~~~~~~~~ ^
main.cpp:63:1: note: 'numerator' declared here
int Rational:: numerator(int a) const
^
main.cpp:98:53: error: too few arguments to function call, single argument 'a' was not specified
    int numerator = lhs.numerator() * rhs.numerator();
                                      ~~~~~~~~~~~~~ ^
main.cpp:63:1: note: 'numerator' declared here
int Rational:: numerator(int a) const
^
main.cpp:99:39: error: too few arguments to function call, single argument 'b' was not specified
    int denominator = lhs.denominator() * rhs.denominator();
                      ~~~~~~~~~~~~~~~ ^
main.cpp:68:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:99:59: error: too few arguments to function call, single argument 'b' was not specified
    int denominator = lhs.denominator() * rhs.denominator();
                                          ~~~~~~~~~~~~~~~ ^
main.cpp:68:1: note: 'denominator' declared here
int Rational:: denominator(int b) const
^
main.cpp:105:35: error: too few arguments to function call, single argument 'a' was not specified
    int numerator = lhs.numerator() * rhs.denominator();
                    ~~~~~~~~~~~~~ ^
main.cpp:63:1: note: 'numerator' declared here
int Rational:: numerator(int a) const
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
2 warnings and 20 errors generated.
